; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/core/extr_sdio_uart.c_sdio_uart_release_func.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/core/extr_sdio_uart.c_sdio_uart_release_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdio_uart_port = type { i64, i32 }

@current = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sdio_uart_port*)* @sdio_uart_release_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdio_uart_release_func(%struct.sdio_uart_port* %0) #0 {
  %2 = alloca %struct.sdio_uart_port*, align 8
  store %struct.sdio_uart_port* %0, %struct.sdio_uart_port** %2, align 8
  %3 = load %struct.sdio_uart_port*, %struct.sdio_uart_port** %2, align 8
  %4 = getelementptr inbounds %struct.sdio_uart_port, %struct.sdio_uart_port* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @current, align 8
  %7 = icmp ne i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i64 @likely(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.sdio_uart_port*, %struct.sdio_uart_port** %2, align 8
  %13 = getelementptr inbounds %struct.sdio_uart_port, %struct.sdio_uart_port* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @sdio_release_host(i32 %14)
  br label %16

16:                                               ; preds = %11, %1
  ret void
}

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @sdio_release_host(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
